--- a/templates/login.html
+++ b/templates/login.html
@@ -19,26 +19,51 @@
 			</div>
                 <div class="card-body">
                     <form method="POST" action="{{ url_for('auth.login') }}">
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        {{ form.csrf_token() }}
+                        <fieldset class="form-group">
+                            <div class="form-group">
+                                {{ form.email.label(class="form-control-label") }}
+                                {% if form.email.errors %}
+                                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.email.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.email(class="form-control form-control-lg", placeholder="Email") }}
+                                {% endif %}
                             </div>
-                            <input type="email" name="email" class="form-control" placeholder="Your Email">
-                            
-                        </div>
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-key"></i></span>
+                            <div class="form-group">
+                                {{ form.password.label(class="form-control-label") }}
+                                {% if form.password.errors %}
+                                    {{ form.password(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.password.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.password(class="form-control form-control-lg", placeholder="Password") }}
+                                {% endif %}
                             </div>
-                            <input type="password" name="password" class="form-control" placeholder="Your password">
-                        </div>
-                        <div class="row align-items-center remember">
-                            <input type="checkbox">Remember Me
-                        </div>
+                            <div class="form-check">
+                                {{ form.remember(class="form-check-input") }}
+                                {{ form.remember.label(class="form-check-label") }}
+                            </div>
+                        </fieldset>
                         <div class="form-group">
-                            <input type="submit" value="Login" class="btn float-right login_btn">
+                            {{ form.submit(class="btn btn-outline-info") }}
                         </div>
+                        <small class="text-muted ml-2">
+                            <a href="#">Forgot Password?</a>
+                        </small>
                     </form>
+                    <div class="border-top pt-3">
+                        <small class="text-muted">
+                            Need An Account? <a class="ml-2" href="{{ url_for('auth.signup') }}">Sign Up Now</a>
+                        </small>
+                    </div>
                 </div>
             </div>
 		</div>
